// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifApp /> debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    Gif App
  </h2>
  <CategoryAdd
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifApp /> should be displayed correctly 1`] = `
<Fragment>
  <h2>
    Gif App
  </h2>
  <CategoryAdd
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
